dashboards/home-assistant/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: dashboard
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: home-assistant
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/part-of: dashboard
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name": "cluster"}, { "name": "local", "mac": "7A:22:25:01:04:09" }]'
      labels:
        app.kubernetes.io/component: home-assistant
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/part-of: dashboard
    spec:
      automountServiceAccountToken: false
      containers:
      - name: home-assistant
        image: home-assistant:latest
        ports:
        - name: dhcp-server
          containerPort: 67
          protocol: UDP
        - name: dhcp-client
          containerPort: 68
          protocol: UDP
        - name: rtsp
          containerPort: 554
        - name: rtsp-udp
          containerPort: 554
          protocol: UDP
        - name: upnp
          containerPort: 1900
          protocol: UDP
        - name: mdns
          containerPort: 5353
          protocol: UDP
        - name: http
          containerPort: 8123
        - name: homekit
          containerPort: 21063
        - name: homekit-flow
          containerPort: 21064
        - name: upnp-40000
          containerPort: 40000
        volumeMounts:
        - name: data
          mountPath: /config
        - name: dbus
          mountPath: /run/dbus
          readOnly: true
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
      serviceAccountName: default
      volumes:
      - name: data
        emptyDir: {}
      - name: dbus
        hostPath:
          path: /run/dbus
