dashboards/home-assistant/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dashboard
  name: home-assistant
spec:
  ports:
  - name: http
    port: 8123
    targetPort: http
  selector:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: dashboard
  type: ClusterIP
