dashboards/home-assistant/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: dashboard
  name: home-assistant
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: home.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.progamesigner.dev
    secretName: tls-dev-progamesigner
